# DINO-Game

./: CMakeLists.txt  README.md
include/: Dino.h  Game.h  Obstacle.h
src/: Dino.cpp  Game.cpp  Obstacle.cpp
